Create XML parser and currency collection initializer